--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@iconify/react": "^5.2.1",
     "@react-pdf/renderer": "^4.3.0",
     "@reduxjs/toolkit": "^2.6.1",
+    "@tanstack/react-query": "^5.90.2",
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
     "clsx": "^2.1.1",
