Added functionality for changing a forgotten password on the login page

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,6 @@
     ".env.example.ts",
     "next.config.ts",
     "src/app/services/deletePet.serverts"
-  ],
+, "src/app/api/forgot-password"  ],
   "exclude": ["node_modules"]
 }
