--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@iconify/react": "^5.2.1",
     "@react-pdf/renderer": "^4.3.0",
     "@reduxjs/toolkit": "^2.6.1",
+    "@stomp/stompjs": "^7.2.1",
     "@tanstack/react-query": "^5.90.2",
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
@@ -32,17 +33,15 @@
     "jwt-decode": "^4.0.0",
     "libphonenumber-js": "^1.12.9",
     "lightningcss": "^1.29.3",
-    "next": "15.3.6",
-    "next-auth": "^4.24.11",
+    "next": "^16.1.6",
     "postcss": "^8.5.3",
-    "react": "^19.1.0",
+    "react": "^19.2.4",
     "react-day-picker": "^9.7.0",
-    "react-dom": "^19.1.0",
+    "react-dom": "^19.2.4",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-modal": "^3.16.3",
-    "react-redux": "^9.2.0",
-    "redux-persist": "^6.0.0",
+    "sockjs-client": "^1.6.1",
     "swiper": "^11.2.6",
     "tailwind-scrollbar": "^4.0.2"
   },
@@ -54,6 +53,7 @@
     "@types/react": "^19.2.4",
     "@types/react-dom": "^19.2.3",
     "@types/react-modal": "^3.16.3",
+    "@types/sockjs-client": "^1.5.4",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
     "tailwindcss": "^4.1.4",
